hphp/test/slow/pipe_expr/bad-pipevar-1.php.expectf

Fatal error: Variable Variables are not legal in %s/bad-pipevar-1.php on line 4
